idea/testData/multiplatform/extensionOnExpect/jvm/jvm.kt
actual class <!LINE_MARKER("descr='Has declaration in common module'")!>E<!> {
    actual fun <!LINE_MARKER("descr='Has declaration in common module'")!>commonMember<!>() {}

    fun platformMember() {}
}